--- a/Investigate_Hotel_Business_using_Data_Visualization.ipynb
+++ b/Investigate_Hotel_Business_using_Data_Visualization.ipynb
@@ -3498,7 +3498,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "14966f9c",
+   "id": "b3aa4a4c",
    "metadata": {},
    "outputs": [
     {
@@ -3765,7 +3765,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "f819f86a",
+   "id": "504b6e7e",
    "metadata": {},
    "outputs": [
     {
@@ -3792,7 +3792,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "aa2e64e5",
+   "id": "0863fd1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3821,7 +3821,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "da9b7fba",
+   "id": "88898881",
    "metadata": {},
    "outputs": [
     {
@@ -3919,7 +3919,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "e06a1071",
+   "id": "ebcac822",
    "metadata": {},
    "outputs": [
     {
@@ -4441,7 +4441,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "24b4f374",
+   "id": "d5fcc134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4452,7 +4452,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "d9e7c60b",
+   "id": "b40c682b",
    "metadata": {},
    "outputs": [
     {
@@ -4680,7 +4680,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "b426a1f2",
+   "id": "a0c7c695",
    "metadata": {
     "scrolled": true
    },
@@ -4944,7 +4944,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "66726862",
+   "id": "c07f855f",
    "metadata": {},
    "outputs": [
     {
@@ -4986,7 +4986,7 @@
    },
    "source": [
     "- Berdasarkan grafik tersebut, dampak lead time terhadap tingkat pembatalan pemesanan hotel pada tipe City Hotel rata-rata persentase pembatalannya lebih tinggi dibandingkan dengan tipe Resort Hotel. Selain itu semakin lama durasi pada interval lead time, persentase pembatalannya cenderung semakin tinggi pada tipe City Hotel. Sedangkan pada tipe Resort Hotel, semakin lama durasi lead time kenaikan persentase pembatalan tidak terlalu signifikan\n",
-    "- Terkait hal tersebut, hotel dapat membatasi lamanya waktu tunggu maksimal di 480 hari atau sekitar 16 bulan untuk tipe City Hotel yang dihitung dari waktu booking hingga waktu kedatangan tamu dengan tujuan meminimalisir pembatalan akibat lamanya waktu tunggu tersebut\n"
+    "- Terkait hal tersebut, hotel dapat membatasi lamanya waktu tunggu maksimal di 30 hari untuk tipe City Hotel maupun Resort Hotel yang dihitung dari waktu booking hingga waktu kedatangan tamu dengan tujuan meminimalisir pembatalan akibat lamanya waktu tunggu tersebut. Karena setelah waktu tunggu lebih dari 30 hari, dari kedua tipe hotel percentase pembatalannya naik secara signifikan\n"
    ]
   },
   {
